# demo-python-embedded-qt-app--with-cmake

./: CMakeLists.txt  readme.md
scripts/: python_script.py
src/: config.h  embeddedPy.cpp  embeddedPy.h  qt-app.cpp
